Issue fix in Notification, Playlist, fav, player, 3DSurround,